近裁剪面的距离设置

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,4 +13,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/UE4_MixAR")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/UE4_MixAR")
+NearClipPlane=1.000000
 
