初始化地图,游戏基础模式等

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Level/TestMap.TestMap
+EditorStartupMap=/Game/Level/TestMap.TestMap
+GlobalDefaultGameMode=/Game/Blueprints/Gameplay/MyGameMode.MyGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
