创建基本游戏类型，完善项目设置等

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,10 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Level/TestMap.TestMap
-EditorStartupMap=/Game/Level/TestMap.TestMap
+GameDefaultMap=/Game/Level/MytestMap.MytestMap
+EditorStartupMap=/Game/Level/MytestMap.MytestMap
 GlobalDefaultGameMode=/Game/Blueprints/Gameplay/MyGameMode.MyGameMode_C
+GameInstanceClass=/Game/Blueprints/Gameplay/MyGameInstance.MyGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
